# BeSteamHN-AI-Tutor

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
besteamhn-games/besteamhn-games/besteamhn-games/: README.md  package.json  tailwind.config.js
besteamhn-games/besteamhn-games/besteamhn-games/hooks/: useGameTimer.ts  useXPStore.tsx
besteamhn-games/besteamhn-games/besteamhn-games/lib/: examples.tsx
programs/bestearn_certificates/: Cargo.toml  README.md
programs/bestearn_certificates/src/: lib.rs
scripts/: create-steam-token.mjs
src/: App.tsx  index.css  main.tsx
src/components/: AIChatFab.tsx  DashboardLayout.tsx  Sidebar.tsx  TopBar.tsx  WalletSync.tsx
src/components/games/: ColorDash.tsx  DragDropChallenge.tsx  GameCard.tsx  GameHub.tsx  QuizBattle.tsx  SkyJump.tsx  SummaryGameButton.tsx
src/data/: mockData.ts
src/hooks/: useSolana.ts  useSteamBalance.ts  useXPStore.tsx
src/idl/: idl.json
src/lib/: auth.tsx  courseProgress.ts  i18n.tsx  mockData.ts  notifications.ts  supabase.ts
src/lib/solana/: idl.json  program.ts
src/pages/: AITutor.tsx  Admin.tsx  CourseBuilder.tsx  CourseDetail.tsx  Courses.tsx  Dashboard.tsx  EducatorCourses.tsx  Index.tsx  Leaderboard.tsx  NFTGallery.tsx  NotFound.tsx  SignIn.tsx  SignUp.tsx  Workshops.tsx
supabase/: app_courses.sql
supabase/functions/ai-tutor/: index.ts
supabase/functions/mint-steam/: index.ts
supabase/functions/mongodb-auth/: index.ts
(+7 files in other folders)
