[package]
name = "bestearn_certificates"
version = "0.1.0"
description = "BESTEAMHN Solana smart contract for student certificates and STEAM rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bestearn_certificates"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
